unpackaged/main/default/objects/pse__Forecast_Batch_Settings__c/pse__Forecast_Batch_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object stores the settings used by Batch Apex jobs for billing forecast calculations.</description>
    <label>Billing Forecast Batch Settings</label>
</CustomObject>