unpackaged/main/default/objects/pse__Forecast_Batch_Settings__c/fields/pse__Forecast_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The number of records to process in a single batch. The value is 200 by default.</description>
    <inlineHelpText>The number of records to process in a single batch. The value is 200 by default.</inlineHelpText>
    <label>Billing Forecast Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>