unpackaged/main/default/objects/pse__Forecast_Batch_Settings__c/fields/pse__Maximum_Queue_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Maximum_Queue_Size__c</fullName>
    <description>The maximum number of billing forecast calculations that can run at once. Leave blank to use recommended default.</description>
    <inlineHelpText>The maximum number of billing forecast calculations that can run at once. Leave blank to use recommended default.</inlineHelpText>
    <label>Maximum Queue Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>